--- a/style.css
+++ b/style.css
@@ -3,20 +3,32 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
     align-items: center;
 }
+
 
 form {
     display: flex;
     flex-direction: row;
     gap: 20px;
     margin-top: 20px;
-
+    
 }
 
 #getCerti {
-    height: 100vh;
+    min-height: 45vh;
     width: 80vw;
     margin-top: 20px;
+    margin-bottom: 30vh;
+}
 
+.btn{
+    width: 20vw;
+}
+
+.footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
